--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
     "next": "12.1.5",
+    "prisma": "^3.13.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "eslint": "8.14.0",
